...
          DropdownMenuItem(
            value: FeatureQueryView.libbookAreaDetail,
            child: Text('分区详情'),
          ),
          DropdownMenuItem(
            value: FeatureQueryView.libbookSeats,
            child: Text('座位查询'),
          ),
          DropdownMenuItem(
            value: FeatureQueryView.libbookBookings,
            child: Text('预约记录'),
          ),
        ],
...
