...
                              child: Column(
                                children: [
                                  if (!widget.isLanding)
                                    TextField(
                                      controller: _searchController,
                                      decoration: const InputDecoration(
                                        labelText: '筛选详情',
                                        prefixIcon: Icon(Icons.search),
                                      ),
                                      onChanged: (_) => setState(() {}),
                                    ),
                                  if (widget.onQuery != null && _supportsQuery)
                                    if (_isCgyyReservation) ...[
...
